# Klient

./: CMakeLists.txt  acceptor.cpp  acceptor.h  client.cpp  connector.cpp  connector.h  filehandler.cpp  filehandler.h  filehandlerfolder.cpp  filehandlerfolder.h  filehandlermove.cpp  filehandlermove.h  filehandlernormal.cpp  filehandlernormal.h  filehandlerremove.cpp  filehandlerremove.h  inotify.cpp  inotify.h  main.cpp  server.cpp  socket.cpp  socket.h  stream.cpp  stream.h
